styles/global.css
* {
  box-sizing: border-box;
}

a {
  color: inherit;
  text-decoration: none;
}

body,
html {
  padding: 0;
  margin: 0;
}

body {
  --notion-font: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
    'Droid Sans', 'Helvetica Neue', 'Noto Sans', sans-serif;
  font-family: var(--notion-font);
  overflow-x: hidden;
}

.static-tweet blockquote {
  margin: 0;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0;
  margin-inline-end: 0;
}

.static-tweet-emoji {
  height: 1.2em !important;
  width: 1.2em !important;
}

.searchInput {
  color: var(--fg-color);
  caret-color: var(--fg-color);
}

::-webkit-scrollbar
{
  width: 5px;
  height: 5px;
  background-color: #F5F5F5;
  background-color: var(--bg-color-1);
}

::-webkit-scrollbar-thumb
{
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
  background-color: #555;
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
  background-color: var(--fg-color-1);
}

::-webkit-scrollbar-track {           
    background-color: var(--bg-color);

/* Fix wide TOC */
.notion-aside {
  overflow-x: hidden;
}

.notion-aside-table-of-contents {
  max-width: 80%;
}

.notion-table-of-contents-item-body {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.3;
}

/* Fix title overflow */
.notion-header .breadcrumb.active {
  overflow: hidden;
  text-overflow: ellipsis;
}

.notion-header .breadcrumb.active>.title {
  overflow: hidden;
  text-overflow: ellipsis;
}

.notion-gallery-grid {
  /* Fix mobile */
  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)) !important;

  /* Decrease grid padding */
  grid-gap: 5vmin;
  gap: 5vmin;
}

/* Wrap long titles */
.notion-gallery-grid .notion-page-title-text {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  text-overflow: ellipsis;
  overflow: hidden;
}

